--- a/ruby/web-apps/sinatra/wiki/views/show.erb
+++ b/ruby/web-apps/sinatra/wiki/views/show.erb
@@ -2,4 +2,10 @@
 
 <p><%= @content %></p>
 
-<div><a href="<%= @title %>/edit">Edit this page</a></div>
+<div>
+    <a href="<%= @title %>/edit">Edit this page</a>
+    <form action="<% @title %>" method="post">
+        <input type="hidden" name="_method" value="delete">
+        <input type="submit" value="Delete this page">
+    </form>
+</div>
