--- a/ruby/web-apps/sinatra/wiki/views/welcome.erb
+++ b/ruby/web-apps/sinatra/wiki/views/welcome.erb
@@ -1,5 +1,14 @@
-<h1>Welcome to Wiki page</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        
+    </head>
+    <body>
+        <h1>Welcome to Wiki page</h1>
 
-<p>Visit /PageName to view a page</p>
+        <p>Visit /PageName to view a page</p>
 
-<p>Or, you can <a href="/new">create a new page</a></p>
+        <p>Or, you can <a href="/new">create a new page</a></p>
+    </body>
+</html>
+
