--- a/sinatra/01-basic-app/app/views/posts/index.erb
+++ b/sinatra/01-basic-app/app/views/posts/index.erb
@@ -1,1 +1,6 @@
 <h1>You've reached the posts page</h1>
+<ul>
+  <% @posts.each do |post|%>
+    <li><a href="/posts/<%= post.id %>"><%= post.title %></a></li>
+  <% end %>
+</ul>
