impl posts new and create actions

--- a/sinatra/01-basic-app/app/views/posts/index.erb
+++ b/sinatra/01-basic-app/app/views/posts/index.erb
@@ -4,3 +4,5 @@
     <li><a href="/posts/<%= post.id %>"><%= post.title %></a></li>
   <% end %>
 </ul>
+
+<p><a href="/posts/new">Create new post</a></p>
