impl index, show, new and create actions

--- a/sinatra/10-sinatra-nested-forms-with-persistence/views/pirates/new.erb
+++ b/sinatra/10-sinatra-nested-forms-with-persistence/views/pirates/new.erb
@@ -5,13 +5,13 @@
   <input type="text" name="pirate[height]" placeholder="pirate height"/><br><br>
 
   <!-- use the 'id' attribute to find the elements when testing with capybara -->
-  <input type="text" id="ship_name_1" name="pirate[ships][][name]"/><br>
-  <input type="text" id="ship_type_1" name="pirate[ships][][type]"/><br>
-  <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"/><br><br>
+  <input type="text" id="ship_name_1" name="pirate[ships][][name]" placeholder="ship name"/><br>
+  <input type="text" id="ship_type_1" name="pirate[ships][][category]"  placeholder="ship type"/><br>
+  <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"  placeholder="ship booty"/><br><br>
 
-  <input type="text" id="ship_name_2" name="pirate[ships][][name]"/><br>
-  <input type="text" id="ship_type_2" name="pirate[ships][][type]"/><br>
-  <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"/><br><br>
+  <input type="text" id="ship_name_2" name="pirate[ships][][name]"  placeholder="ship name"/><br>
+  <input type="text" id="ship_type_2" name="pirate[ships][][category]"  placeholder="ship type"/><br>
+  <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"  placeholder="ship booty"/><br><br>
 
   <input type="submit" value="Submit" />
 
