impl rest methods of index, show, new and create

--- a/sinatra/12-sinatra-nested-forms-lab-with-persistence/app/views/new.erb
+++ b/sinatra/12-sinatra-nested-forms-lab-with-persistence/app/views/new.erb
@@ -30,39 +30,39 @@
 <h1>Create a Team and Heroes!</h1>
 <form action="/teams" method="post">
   <label for="team_name">Team Name</label>
-  <input id="team_name" type="text" name="team[name]"/>
+  <input id="team_name" type="text" name="team[name]"/><br><br>
   <label for="team_motto">Team Motto</label>
   <input id="team_motto" type="text" name="team[motto]"/>
 
   <h2>Hero 1</h2>
   <label for="member1_name">Hero's Name</label>
-  <input id="member1_name" type="text" name="team[members][][name]"/>
+  <input id="member1_name" type="text" name="team[members][][name]"/><br><br>
 
   <label for="member1_power">Hero's Power</label>
-  <input id="member1_power" type="text" name="team[members][][power]"/>
+  <input id="member1_power" type="text" name="team[members][][power]"/><br><br>
 
   <label for="member1_bio">Hero's Biography</label>
-  <input id="member1_bio" type="text" name="team[members][][bio]"/>
+  <input id="member1_bio" type="text" name="team[members][][bio]"/><br><br>
 
   <h2>Hero 2</h2>
   <label for="member2_name">Hero's Name</label>
-  <input id="member2_name" type="text" name="team[members][][name]"/>
+  <input id="member2_name" type="text" name="team[members][][name]"/><br><br>
 
   <label for="member2_power">Hero's Power</label>
-  <input id="member2_power" type="text" name="team[members][][power]"/>
+  <input id="member2_power" type="text" name="team[members][][power]"/><br><br>
 
   <label for="member2_bio">Hero's Biography</label>
-  <input id="member2_bio" type="text" name="team[members][][bio]"/>
+  <input id="member2_bio" type="text" name="team[members][][bio]"/><br><br>
 
   <h2>Hero 3</h2>
   <label for="member3_name">Hero's Name</label>
-  <input id="member3_name" type="text" name="team[members][][name]"/>
+  <input id="member3_name" type="text" name="team[members][][name]"/><br><br>
 
   <label for="member3_power">Hero's Power</label>
-  <input id="member3_power" type="text" name="team[members][][power]"/>
+  <input id="member3_power" type="text" name="team[members][][power]"/><br><br>
 
   <label for="member3_bio">Hero's Biography</label>
-  <input id="member3_bio" type="text" name="team[members][][bio]"/>
+  <input id="member3_bio" type="text" name="team[members][][bio]"/><br><br>
 
   <input type="submit" value="submit" />
 </form>
