impl sinatra app with signup, login/out and multiple controllers

--- a/sinatra/21-sinatra-auth-app/app/views/index.erb
+++ b/sinatra/21-sinatra-auth-app/app/views/index.erb
@@ -1,1 +1,12 @@
 <h1>Sinatra Web App Skeleton</h1>
+
+<p>Pick your poison!</p>
+<p>
+  <a href="/signup">Signup</a>&nbsp;&nbsp;
+  <a href="/login">Login</a>&nbsp;&nbsp;
+  <a href="/logout">Logout</a>
+</p>
+<p>
+  <a href="/posts">View posts</a>&nbsp;&nbsp;
+  <a href="/posts/new">Create a post</a>
+</p>
