--- a/sinatra/21-sinatra-auth-app/app/views/layout.erb
+++ b/sinatra/21-sinatra-auth-app/app/views/layout.erb
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>title</title>
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
   </head>
   <body>
     <%= yield %>
