impl basic html todo list structure on index page

--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/site/index.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/site/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Site#index</h1>
-<p>Find me in app/views/site/index.html.erb</p>
+<section class="todoapp">
+	<header class="header">
+		<h1>todos</h1>
+		<input class="new-todo" placeholder="What needs to be done?" autofocus="">
+	</header>
+	<section class="main" style="display: block;">
+		<input class="toggle-all" type="checkbox">
+		<label for="toggle-all">Mark all as complete</label>
+		<ul class="todo-list"><li data-id="1510484709811" class=""><div class="view"><input class="toggle" type="checkbox"><label>need to buy milk</label><button class="destroy"></button></div></li></ul>
+	</section>
+	<footer class="footer" style="display: block;">
+		<span class="todo-count"><strong>1</strong> item left</span>
+		<ul class="filters">
+			<li>
+				<a href="#/" class="selected">All</a>
+			</li>
+			<li>
+				<a href="#/active">Active</a>
+			</li>
+			<li>
+				<a href="#/completed">Completed</a>
+			</li>
+		</ul>
+		<button class="clear-completed" style="display: none;"></button>
+	</footer>
+</section>
