impl static show action to test app

--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/index.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/index.html.erb
@@ -1,5 +1,5 @@
 <section class="todoapp">
-  <%= render 'header'%>
+  <%= render 'header_lists'%>
 	<section class="main" style="display: block;">
 		<%# render 'toggle' %>
 		<ul class="todo-list">
