review of active record associations

--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_header_lists.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_header_lists.html.erb
@@ -1,4 +1,7 @@
 <header class="header">
   <h1>todo lists</h1>
-  <input class="new-todo" placeholder="Add a new List" autofocus="">
+  <!-- <input class="new-todo" placeholder="Add a new List" autofocus=""> -->
+  <%= form_for(@list) do |f| %>
+    <%= f.text_field :name, {class: 'new-todo', placeholder: "Add a new List"} %>
+  <% end %>
 </header>
