impl html registration form

--- a/08-rails/demo-apps/25-nested-forms-lab/nested-form/app/views/users/new.html.erb
+++ b/08-rails/demo-apps/25-nested-forms-lab/nested-form/app/views/users/new.html.erb
@@ -1,2 +1,46 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>User registration form</h1>
+<form>
+  <label for="">Email</label><br>
+  <input type="text" name=""><br><br>
+
+  <fieldset>
+    <legend>Home Address</legend>
+
+    <label for="">Street</label><br>
+    <input type="text" name=""><br><br>
+
+    <label for="">Street</label><br>
+    <input type="text" name=""><br><br>
+  </fieldset>
+
+
+  <fieldset>
+    <legend>Business Address</legend>
+
+    <label for="">Street</label><br>
+    <input type="text" name=""><br><br>
+
+    <label for="">Street</label><br>
+    <input type="text" name=""><br><br>
+  </fieldset>
+
+  <fieldset>
+    <legend>Existing Team by Name</legend>
+
+    <label for="">Enter your team name</label><br>
+    <input type="text" name=""><br><br>
+  </fieldset>
+
+  <fieldset>
+    <legend>Create a new Team</legend>
+
+    <label for="">Name</label><br>
+    <input type="text" name=""><br><br>
+
+    <label for="">Hometown</label><br>
+    <input type="text" name=""><br><br>
+  </fieldset><br>
+
+  <input type="submit" name="Submit">
+
+</form>
