--- a/08-rails/demo-apps/25-nested-forms-lab/nested-form/app/views/users/index.html.erb
+++ b/08-rails/demo-apps/25-nested-forms-lab/nested-form/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users list</h1>
 <ul>
   <% @users.each do |user| %>
-    <li><%= link_to user.email, user.path(user) %></li>
+    <li><%= link_to user.email, user_path(user) %></li>
   <% end %>
 </ul>
