--- a/08-rails/demo-apps/27-rendering-layouts-and-templates-lab/app/views/layouts/order_administration.html.erb
+++ b/08-rails/demo-apps/27-rendering-layouts-and-templates-lab/app/views/layouts/order_administration.html.erb
@@ -7,8 +7,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+  <h1>Flatiron Widgets: Open Orders</h1>
+  <%= yield %>
 
 </body>
 </html>
