--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
@@ -1,7 +1,7 @@
 <li>
   <div class="view">
     <input class="toggle" type="checkbox">
-    <label>need to buy milk</label>
+    <label><%= item.description %></label>
     <button class="destroy"></button>
   </div>
 </li>
