--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_header_lists.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_header_lists.html.erb
@@ -1,7 +1,8 @@
 <header class="header">
+  <!-- form for adding new lists -->
   <h1>todo lists</h1>
   <!-- <input class="new-todo" placeholder="Add a new List" autofocus=""> -->
-  <%= form_for(@list) do |f| %>
+  <%= form_for(list) do |f| %>
     <%= f.text_field :name, {class: 'new-todo', placeholder: "Add a new List"} %>
   <% end %>
 </header>
