--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/show.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/show.html.erb
@@ -1,5 +1,5 @@
 <section class="todoapp">
-  <%= render 'header_list'%>
+  <%= render partial: 'header_list', locals: {item: @item, list: @list} %>
 	<section class="main" style="display: block;">
 		<%= render 'toggle' %>
 		<ul class="todo-list">
