--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/layouts/application.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/layouts/application.html.erb
@@ -3,12 +3,15 @@
   <head>
     <title>TodoMvcApp</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <% flash.each do |name, msg| -%>
+      <%= content_tag :div, msg, class: name %>
+    <% end -%>
+    
     <%= yield %>
   </body>
 </html>
