add css class to completed items using item complete? method

--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="<%= 'completed' if item.complete? %>">
   <div class="view">
     <input class="toggle" type="checkbox">
     <label><%= item.description %></label>
