add logic to checkbox input to show checked status depnding on item status

--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
@@ -1,6 +1,6 @@
 <li class="<%= 'completed' if item.complete? %>">
   <div class="view">
-    <input class="toggle" type="checkbox">
+    <input class="toggle" type="checkbox" <%= "checked='checked'" if item.complete? %>>
     <label><%= item.description %></label>
     <button class="destroy"></button>
   </div>
