impl items#update method to update the items status when clicking on the items checkbox

--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
@@ -7,7 +7,8 @@
     </form> -->
 
     <%= form_for(item, url: list_item_path(list, item)) do |f| %>
-      <input class="toggle" type="checkbox" <%= "checked='checked'" if item.complete? %>>
+      <!-- <input class="toggle" type="checkbox" <%# "checked='checked'" if item.complete? %>> -->
+      <%= f.check_box :status, class: 'toggle', checked: (true if item.complete?) %>
     <% end %>
     <label><%= item.description %></label>
     <button class="destroy"></button>
