--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
@@ -7,11 +7,25 @@
       <input class="toggle" type="checkbox" <%= "checked='checked'" if item.complete? %>>
     </form> -->
 
+    <!-- complete toggle -->
     <%= form_for(item, url: list_item_path(list, item)) do |f| %>
       <!-- <input class="toggle" type="checkbox" <%# "checked='checked'" if item.complete? %>> -->
       <%= f.check_box :status, class: 'toggle', checked: item.complete? %>
     <% end %>
+
+    <!-- item description -->
     <label><%= item.description %></label>
-    <button class="destroy"></button>
+
+    <!-- delete item -->
+    <%# form_for(item, url: list_item_path(list, item), method: 'delete') do |f| %>
+
+    <%# end %>
+
+    <form action="<%= list_item_path(list, item) %>" method="post">
+      <input name="utf8" type="hidden" value="&#x2713;" />
+      <input name="authenticity_token" type="hidden" value="J7CBxfHalt49OSHp27hblqK20c9PgwJ108nDHX/8Cts=" />
+      <input type="hidden" name="_method" value="delete">
+      <button class="destroy" type="submit"></button>
+    </form>
   </div>
 </li>
