--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
@@ -1,6 +1,8 @@
 <!-- <li class="<%# 'completed' if item.complete? %>"> -->
 <li class="<%= li_class_for_item(item) %>">
   <div class="view">
+
+    <!-- html for example -->
     <!-- <form class="" action="<%# lists_path %>" method="get">
       <input name="utf8" type="hidden" value="&#x2713;" />
       <input name="authenticity_token" type="hidden" value="J7CBxfHalt49OSHp27hblqK20c9PgwJ108nDHX/8Cts=" />
@@ -17,15 +19,16 @@
     <label><%= item.description %></label>
 
     <!-- delete item -->
-    <%# form_for(item, url: list_item_path(list, item), method: 'delete') do |f| %>
+    <%= form_tag(list_item_path(list, item), method: 'delete') do %>
+      <button class="destroy" type="submit"></button>
+    <% end %>
 
-    <%# end %>
-
-    <form action="<%= list_item_path(list, item) %>" method="post">
+    <!-- html form example -->
+    <!-- <form action="<%= list_item_path(list, item) %>" method="post">
       <input name="utf8" type="hidden" value="&#x2713;" />
       <input name="authenticity_token" type="hidden" value="J7CBxfHalt49OSHp27hblqK20c9PgwJ108nDHX/8Cts=" />
       <input type="hidden" name="_method" value="delete">
       <button class="destroy" type="submit"></button>
-    </form>
+    </form> -->
   </div>
 </li>
