impl items destroy action to delete the clicked on list item

--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/app/views/lists/_list_item.html.erb
@@ -18,10 +18,11 @@
     <!-- item description -->
     <label><%= item.description %></label>
 
-    <!-- delete item -->
+    <!-- delete item using form_tag -->
     <%= form_tag(list_item_path(list, item), method: 'delete') do %>
       <button class="destroy" type="submit"></button>
     <% end %>
+
 
     <!-- html form example -->
     <!-- <form action="<%= list_item_path(list, item) %>" method="post">
