--- a/08-rails/demo-apps/46-login_required_lab/app/views/layouts/application.html.erb
+++ b/08-rails/demo-apps/46-login_required_lab/app/views/layouts/application.html.erb
@@ -2,13 +2,20 @@
 <html>
 <head>
   <title>LoginRequiredLab</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <% flash.each do |name, msg| %>
     <%= content_tag :div, msg, class: name %>
+  <% end %>
+
+  <% if current_user %>
+    <!-- don't include a link for logouts -->
+    <%= form_tag controller: 'sessions', action: 'destroy', method: 'post' do %>
+      <input type="submit" value="Logout">
+    <% end %>
   <% end %>
 
   <%= yield %>
