--- a/08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/app/views/pages/home.html.erb
+++ b/08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/app/views/pages/home.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Signup Page</h1>
+
+<% if current_user %>
+	<%= current_user.inspect %>
+<% end %>
+
+<% unless current_user %>
+	<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
+<% else %>
+	<%= link_to "Logout", destroy_user_session_path, method: :delete %>
+<% end %>
