--- a/08-rails/review/01-rails-url-helpers-lab-cb-000/app/views/students/show.html.erb
+++ b/08-rails/review/01-rails-url-helpers-lab-cb-000/app/views/students/show.html.erb
@@ -1,1 +1,3 @@
 <h1><%= @student.to_s %></h1>
+<p>This student is currently <%= student_active? %>.</p>
+<p><%= link_to 'toggle status', activate_student_path(@student) %></p>
