--- a/08-rails/demo-apps/05-form-tag-and-form-helpers/app/views/posts/new.html.erb
+++ b/08-rails/demo-apps/05-form-tag-and-form-helpers/app/views/posts/new.html.erb
@@ -17,7 +17,7 @@
   <!--<label for="post_description">Descrition</label>-->
   <!--<input id="post_description" type="text" name="post[description]" /><br>-->
   <!--<input type="submit" name="submit" value="Submit Post">-->
-<%# end %> -->
+<%# end %>
 
 <!-- 3. incorporate rails form helpers -->
 <%= form_tag posts_path do %>
