--- a/08-rails/review/03-rails-form_tag-lab/app/views/students/index.html.erb
+++ b/08-rails/review/03-rails-form_tag-lab/app/views/students/index.html.erb
@@ -1,5 +1,8 @@
+<h1>Student List</h1>
 <div>
   <% @students.each do |student| %>
     <div><%= link_to student.to_s, student_path(student) %></div>
   <% end %>
 </div>
+<br>
+<%= link_to 'New', new_student_path %>
