--- a/08-rails/review/06-rails-edit-update-action-readme/app/views/posts/show.html.erb
+++ b/08-rails/review/06-rails-edit-update-action-readme/app/views/posts/show.html.erb
@@ -1,2 +1,5 @@
 <h1><%= @post.title %></h1>
 <p><%= @post.description %></p>
+
+<%= link_to 'Edit', "/posts/#{@post.id}/edit" %> |
+<%= link_to 'Back', posts_path %>
