--- a/08-rails/review/07-rails-form_for-on-edit-readme/app/views/posts/edit.html.erb
+++ b/08-rails/review/07-rails-form_for-on-edit-readme/app/views/posts/edit.html.erb
@@ -1,11 +1,13 @@
 <h3>Post Form</h3>
 
-<%= form_tag post_path(@post), method: "put" do %>
-  <label>Post title:</label><br>
-  <%= text_field_tag :title, @post.title %><br>
+<!--form_for automaticall sets the path and method, using 'patch' when it's passed a pre-existing record-->
+<!--automatically auto-fills values-->
+<%= form_for(@post) do |f| %>
+  <label for="post_title">Post title:</label><br>
+  <%= f.text_field :title %><br>
 
-  <label>Post Description</label><br>
-  <%= text_area_tag :description, @post.description %><br>
+  <label for="post_description">Post Description</label><br>
+  <%= f.text_area :description %><br>
   
-  <%= submit_tag "Submit Post" %>
+  <%= f.submit %>
 <% end %>
