--- a/08-rails/review/07-rails-form_for-on-edit-readme/app/views/posts/index.html.erb
+++ b/08-rails/review/07-rails-form_for-on-edit-readme/app/views/posts/index.html.erb
@@ -1,3 +1,5 @@
 <% @posts.each do |post| %>
-  <div><%= post.title %></div>
+  <div><%= link_to post.title, post_path(post) %></div>
 <% end %>
+<br>
+<%= link_to 'Create post', new_post_path %>
