overview of strong params use with submiting form data in rails

--- a/08-rails/review/08-strong-params-basics/app/views/posts/edit.html.erb
+++ b/08-rails/review/08-strong-params-basics/app/views/posts/edit.html.erb
@@ -1,6 +1,9 @@
 <%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
-  <%= f.text_field :title %><br>
+  <%= f.text_field :title %><br><br>
 
   <%= f.submit %>
 <% end %>
+
+<br>
+<%= link_to 'Back', post_path(@post) %>
