--- a/08-rails/review/08-strong-params-basics/app/views/posts/index.html.erb
+++ b/08-rails/review/08-strong-params-basics/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Posts List</h1>
 <% @posts.each do |post| %>
-  <div><%= link_to post.title, posts_path(post) %></div>
+  <div><%= link_to post.title, post_path(post) %></div>
 <% end %>
 
 <br>
