--- a/08-rails/review/08-strong-params-basics/app/views/posts/new.html.erb
+++ b/08-rails/review/08-strong-params-basics/app/views/posts/new.html.erb
@@ -3,9 +3,10 @@
   <%= f.text_field :title %><br>
 
   <label>Post Description</label><br>
-  <%= f.text_area :description %><br>
+  <%= f.text_area :description %><br><br>
 
   <%= f.submit %>
 <% end %>
 
+<br>
 <%= link_to 'Back', posts_path %>
