--- a/08-rails/review/08-strong-params-basics/app/views/posts/show.html.erb
+++ b/08-rails/review/08-strong-params-basics/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
-<h1><%= @post.title %></h1>
-<p><%= @post.description %></p>
+<h1>Title: <%= @post.title %></h1>
+<p>Description: <%= @post.description %></p>
 
 <%= link_to 'Edit', "/posts/#{@post.id}/edit" %> |
 <%= link_to 'Back', posts_path %>
