--- a/08-rails/review/11-rails-cru-form_for-lab/app/views/songs/show.html.erb
+++ b/08-rails/review/11-rails-cru-form_for-lab/app/views/songs/show.html.erb
@@ -1,1 +1,5 @@
+<h1>Song: <%= @song.name %></h1>
+<p>Artist: <%= link_to @artist.name, artist_path(@artist) %></p>
+<p>Genre: <%= link_to @genre.name, genre_path(@genre) %></p>
 
+<%= link_to 'Back', songs_path %>
