update app edit and new templates to display validation error messages to users

--- a/08-rails/review/13-validations-in-controller-actions-rails-lab/app/views/authors/new.html.erb
+++ b/08-rails/review/13-validations-in-controller-actions-rails-lab/app/views/authors/new.html.erb
@@ -1,12 +1,26 @@
 <h2>Create an Author</h2>
-<%= form_tag authors_path, method: "post" do %>
-  <div class="field">
-    <%= label_tag "name", "Name" %>
-    <%= text_field_tag "name" %>
+
+<!--display error validation errors to user at top-->
+<% if @author.errors.any? %>
+  <div id="error_explanation">
+    <h2>There were some errors:</h2>
+    <ul>
+      <% @author.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
   </div>
-  <div class="field">
+<% end %>
+
+<!--display form - highlighting any fields in error-->
+<%= form_tag authors_path, method: "post" do %>
+  <div class="field<%= ' field_with_errors' if @author.errors[:name].any? %>">
+    <%= label_tag "name", "Name" %>
+    <%= text_field_tag "name", @author.name %>
+  </div>
+  <div class="field<%= ' field_with_errors' if @author.errors[:email].any? %>">
     <%= label_tag "email", "Email" %>
-    <%= text_field_tag "email" %>
+    <%= text_field_tag "email", @author.email %>
   </div>
   <%= submit_tag "Create Author" %>
 <% end %>
