--- a/08-rails/review/14-validations-with-form_tag-rails-lab/app/views/posts/edit.html.erb
+++ b/08-rails/review/14-validations-with-form_tag-rails-lab/app/views/posts/edit.html.erb
@@ -1,11 +1,24 @@
 <h2>Editing "<%= @post.title %>"</h2>
+
+<% if @post.errors.any? %>
+  <div id="error_explanation">
+    <h2>There were some errors:</h2>
+    <ul>
+      <% @post.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_tag post_path(@post), method: "patch" do %>
-  <div class="field">
+
+  <div class="field<%= ' field_with_errors' if @post.errors[:title].any? %>">
     <%= label_tag "title", "Title" %>
     <%= text_field_tag "title", @post.title %>
   </div>
 
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @post.errors[:category].any? %>">
     <%= label_tag "category", "Category" %>
     <p>Must be either "Fiction" or "Non-Fiction".</p>
     <%= text_field_tag "category", @post.category %>
@@ -15,7 +28,7 @@
     </p>
   </div>
 
-  <div class="field">
+  <div class="field<%= ' field_with_errors' if @post.errors[:content].any? %>">
     <%= label_tag "content", "Content" %>
     <br />
     <%= text_area_tag "content", @post.content %>
